# sailfishc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile  out.c
docs/: GRAMMAR.txt
examples/: Foo.fish  LinkedList.fish  counter.fish  fizzbuzz.fish  foo.fish  function.fish  helloworld.fish  intListHandler.fish  mergesort.fish  sailfishc_test.fish  sailfishv2.fish  stack.fish  test.fish  test2.fish  treenode.fish
sailfish_examples/: fizzbuzz.fish  helloworld.fish  loo.fish  nonsense_lexar.fish  parser.fish  random.fish  semantics.fish  semantics_assignment.fish  semantics_dictionaries.fish  semantics_dictionary_list_accessors.fish  semantics_function_return.fish  semantics_functions.fish  semantics_lists.fish  semantics_methodaccess.fish  semantics_primitives.fish  semantics_udt.fish  sematics_udt_self.fish  stack.fish  udt.fish
src/ast/: Addition.h  AndComparison.h  ArrayExpression.h  Assignment.h  Ast.h  AttributeAccess.h  AttributeMethodAccess.h  BinaryCompOrArith.h  BinaryExpression.h  BinaryGreaterThan.h  BinaryGreaterThanOrEqual.h  BinaryLessThan.h  BinaryLessThanOrEqual.h  Block.h  BooleanLiteral.h  Break.h  ByteLiteral.h  Continue.h  DictionaryDefinition.h  DictionaryItem.h  DictionaryLiteral.h  Division.h  EquivalenceComparison.h  Exponentiation.h  ExportDefinition.h  Exportable.h  Expression.h  ExpressionOnlyStatement.h  ExpressionStatement.h  FloatLiteral.h  FunctionCall.h  FunctionDefinition.h  GeneralDecleration.h  GeneralDefinition.h  GroupingExpression.h  Identifier.h  IfStatement.h  IndexAccess.h  InitialExecutionBody.h  Input.h  (+45 more)
src/common/: ReservedWords.cpp  ReservedWords.h  display.h
src/errorhandler/: Error.h  Error2.h  ErrorHandler.h  LexarErrorHandler.cpp  LexarErrorHandler.h  Parser2ErrorHandler.cpp  Parser2ErrorHandler.h  ParserErrorHandler.cpp  ParserErrorHandler.h  SemanticAnalyzerErrorHandler.cpp  SemanticAnalyzerErrorHandler.h  SemanticErrorHandler.cpp  SemanticErrorHandler.h  SymbolTableErrorHandler.cpp  SymbolTableErrorHandler.h  Warning.h  display.h
src/lexar/: Lexar.cpp  Lexar.h  Lexar2.cpp  Lexar2.h  Scanner.h  Token.cpp  Token.h  Token2.cpp  Token2.h
src/main/: CommandLine.cpp  CommandLine.h  main.cpp
src/parser/: Lexeme.cpp  Lexeme.h  Parser.cpp  Parser.h  Parser2.cpp  Parser2.h
src/sailfish/: DFA.cpp  DFA.h  Lexar.cpp  Lexar.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  Token.cpp  Token.h  sailfishc.cpp  sailfishc.h
src/semant/: CommonExtractions.cpp  CommonExtractions.h  DictionarySymbol.cpp  FunctionSymbol.cpp  ListSymbol.h  PrimitiveSymbol.h  ScopeStack.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  Symbol.h  SymbolMetaData.h  SymbolTable.cpp  SymbolTable.h  TypeChecker.cpp  TypeChecker.h  UDTMetaData.h  UDTSymbol.h  UDTTable.cpp  UDTTable.h
src/semant/symbol_table/: DictionarySymbol.cpp  DictionarySymbol.h  FunctionSymbol.cpp  FunctionSymbol.h  ListSymbol.h  PrimitiveSymbol.h  ScopeStack.h  Symbol.h  SymbolTable.cpp  SymbolTable.h  UDTSymbol.cpp  UDTSymbol.h
src/semantics/: CommonExtractions.cpp  CommonExtractions.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolMetaData.cpp  SymbolMetaData.h  SymbolTable.cpp  SymbolTable.h  TypeChecker.cpp  TypeChecker.h  UDTMetaData.cpp  UDTMetaData.h  UDTTable.cpp  UDTTable.h
src/stdlib_c/: Lists.cpp  Lists.h  stdlib_c.cpp  stdlib_c.h
src/tests/: SemanticAnalysisTest.cpp  SemanticAnalysisTest.h
src/transpiler/: Transpiler.cpp  Transpiler.h  transpiler.cpp  transpiler.h
src/visitor/: InOrderTraversal.cpp  InOrderTraversal.h  InitialExecution.cpp  InitialExecution.h  Visitor.cpp  Visitor.h  visitor.h
stdlib/: README.md  display.h  stdlib.h
test/: CMakeLists.txt  tests.cpp
test/examples/: lexar2.fish  nonsense_lexar.fish  parser.fish  parser2_script.fish  parser2_udt.fish  semantics_assignment.fish  semantics_attributeaccess.fish  semantics_binaries_unaries.fish  semantics_if_else.fish  semantics_udt.fish
test/visitors/: InOrderTraversal.cpp  InOrderTraversal.h
